--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/lms_rock?createTableIfNotExist
 spring.datasource.username=root
 spring.datasource.password=Abhi91
 spring.jpa.hibernate.ddl-auto=update
+server.port= 1010
